manifests/k8s/auth.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intellectaa-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intellectaa-auth
  template:
    metadata:
      labels:
        app: intellectaa-auth
    spec:
      containers:
      - image: dilshadjr3312/intellectaa-auth:latest
        name: intellectaa-auth
---
apiVersion: v1
kind: Service
metadata:
  name: intellectaa-auth-srv
spec:
  selector:
    app: intellectaa-auth
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
