manifests/k8s/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-stack
  template:
    metadata:
      labels:
        app: redis-stack
    spec:
      containers:
      - name: redis-stack
        image: redis/redis-stack:latest
        ports:
        - containerPort: 6379
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stack
spec:
  selector:
    app: redis-stack
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
    - name: redis-insight
      port: 8001
      targetPort: 8001
