manifests/k8s/user.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intellectaa-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intellectaa-user
  template:
    metadata:
      labels:
        app: intellectaa-user
    spec:
      containers:
      - image: dilshadjr3312/intellectaa-user:latest
        name: intellectaa-user
---
apiVersion: v1
kind: Service
metadata:
  name: intellectaa-user-srv
spec:
  selector:
    app: intellectaa-user
  ports:
  - protocol: TCP
    port: 3004
    targetPort: 3004
