manifests/k8s/ingress.srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: www.medifly.site
    http:
      paths:
      - path: /api/auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-auth-srv
            port:
              number: 3001
      - path: /api/user?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-user-srv
            port:
              number: 3004
      - path: /api/payment?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-payment-srv
            port:
              number: 3007
      - path: /api/code?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-code-srv
            port:
              number: 3006
      - path: /api/course?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-course-srv
            port:
              number: 3005
      - path: /api/chat?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-chat-srv
            port:
              number: 3008
      - path: /api/notification?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-notification-srv
            port:
              number: 3003
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: intellectaa-client-srv
            port:
              number: 3000
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: intellectaa-chat-srv
            port:
              number: 3008
